[package]
name = "ukf"
version = "0.2.0"
authors = ["nick <nick.hortovanyi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = {version = "^4.0", features = ["derive"]}
tracing = "^0.1"
tracing-subscriber = "^0.3"
nalgebra = "^0.31"
num-traits = "0.2"
csv="^1.1"
serde="^1.0"
serde_derive="^1.0"
